# Bloogo-App

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/api/: __init__.py  auth.py  database.py  emailsend.py  models.py  utils.py
backend/api/route/: __init__.py  blog.py  profile.py  tag.py  user.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/Auth/: index.jsx
frontend/src/Hooks/: useProfile.jsx  useTitle.js  useToken.js
frontend/src/Pages/: index.jsx
frontend/src/Pages/About/: index.jsx
frontend/src/Pages/Blog/: index.jsx
frontend/src/Pages/BlogTag/: index.jsx
frontend/src/Pages/Blogs/: index.jsx
frontend/src/Pages/ChangePassword/: index.jsx
frontend/src/Pages/Dashboard/: index.jsx
frontend/src/Pages/Developers/: index.jsx
frontend/src/Pages/Edit/: index.jsx
frontend/src/Pages/Error/: index.jsx
frontend/src/Pages/Forgot/: index.jsx
frontend/src/Pages/Home/: index.jsx
frontend/src/Pages/Login/: index.jsx
frontend/src/Pages/NewBlog/: index.jsx
frontend/src/Pages/Profile/: index.jsx
frontend/src/Pages/PublicProfile/: index.jsx
frontend/src/Pages/SearchAuthor/: index.jsx
frontend/src/Routes/: index.jsx
frontend/src/Schemas/: scheme.js
frontend/src/Store/: index.js
frontend/src/api/: api.js  index.js
frontend/src/data/: index.js
frontend/src/service/: api.js
frontend/src/utils/: SpinPage.jsx  history.js  imageurl.js  isProfileComplete.js  storetoken.js
(+40 files in other folders)
