[tool.poetry]
name = "backend"
version = "1.5.0"
description = ""
authors = ["Prathameshdhande22 <prathameshdhande534@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "^0.5.0"
anyio = "3.7.1"
bcrypt = "*"
cachetools = "*"
certifi = "^2023.5.7"
charset-normalizer = "^3.2.0"
click = "*"
colorama = "0.4.6"
dnspython = "2.4.0"
email-validator = "^2.0.0.post2"
exceptiongroup = "^1.1.2"
fastapi = "*"
greenlet = "2.0.2"
h11 = "^0.14.0"
httpcore = "^0.17.3"
httplib2 = "^0.22.0"
idna = "^3.4"
mongoengine = "*"
oauthlib = "*"
passlib = "^1.7.4"
protobuf = "^4.23.4"
pyasn1 = "^0.5.0"
pyasn1-modules = "^0.3.0"
pydantic = "*"
pydantic-core = "*"
pyjwt = "*"
pymongo = "*"
pyparsing = "^3.1.0"
python-dateutil = "^2.8.2"
python-dotenv = "*"
requests = "*"
requests-oauthlib = "^1.3.1"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
starlette = "*"
typing-extensions = "^4.7.1"
uritemplate = "^4.1.1"
urllib3 = "^1.26.16"
uvicorn = "*"
python-multipart = "^0.0.7"
cloudinary = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
